--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div class="container">
-  <h1>The Jungle<sup><small>&trade;</small></sup> FastRider Service</h1>
-</div>
+<div class="container mt-5">
+   <app-dashboard></app-dashboard>
+</div>  
 
