small tweek for design

--- a/src/app/components/instructions/instructions.component.html
+++ b/src/app/components/instructions/instructions.component.html
@@ -1,28 +1,23 @@
+
 <div class="row">
   <div class="col-md-1">&nbsp;</div>
   <div class="col-md-3">
-    <div class="round">
-      <img src="../../assets/ico-01.svg" alt="" />
-    </div>
-    <p class="text-center">
+    <div class="round"><img src="../../assets/ico-01.svg" alt=""/></div>
+      <p class="text-center">
       Enter your park ticket #PIN number, then select the desired ride while noting the stated return time
-    </p>
-  </div>
-  <div class="col-md-3">
-    <div class="round">
-      <img src="../../assets/ico-02.svg" alt="" />
+      </p>
     </div>
-    <p>
+    <div class="col-md-3">
+      <div class="round"><img src="../../assets/ico-02.svg" alt=""/></div>
+      <p>
       Press 'submit' to confirm and retrieve your access code
-    </p>
-  </div>
-  <div class="col-md-3">
-    <div class="round">
-      <img src="../../assets/ico-03.svg" alt="" />
+      </p>
     </div>
-    <p>
+    <div class="col-md-3">
+      <div class="round"><img src="../../assets/ico-03.svg" alt=""/></div>
+      <p>
       When the time comes, use the special FastRider line to cut out a considerable wait time
     </p>
-  </div>
+    </div>
 
-</div>
+  </div> 
