search design is on

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,3 +1,4 @@
-<p>
-  search works!
-</p>
+<form class="col-lg-12 mt-4" action="">
+  <input type="text" placeholder="&nbsp;&nbsp;#pin">
+  <button class="myBtn">submit</button>
+</form>
