mobile tweaks for instructions compo using flex layout module

--- a/src/app/components/instructions/instructions.component.html
+++ b/src/app/components/instructions/instructions.component.html
@@ -1,23 +1,39 @@
-
-<div class="row">
-  <div class="col-md-1">&nbsp;</div>
-  <div class="col-md-3">
-    <div class="round"><img src="../../assets/ico-01.svg" alt=""/></div>
-      <p class="text-center">
+<div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+  <div class="flex-item1" fxFlex="30%" fxLayout="column"
+    fxLayout.xs="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="10px"
+    fxLayoutGap.xs="0">
+    <div class="round">
+      <img src="../../assets/ico-01.svg" alt="" />
+    </div>
+    <p class="text-center">
       Enter your park ticket #PIN number, then select the desired ride while noting the stated return time
-      </p>
+    </p>
+  </div>
+  <div class="flex-item2" fxFlex="30%" fxLayout="column"
+      fxLayout.xs="column"
+      fxLayoutAlign="center center"
+      fxLayoutGap="10px"
+      fxLayoutGap.xs="0">
+    <div class="round">
+      <img src="../../assets/ico-02.svg" alt="" />
     </div>
-    <div class="col-md-3">
-      <div class="round"><img src="../../assets/ico-02.svg" alt=""/></div>
-      <p>
+    <p>
       Press 'submit' to confirm and retrieve your access code
-      </p>
+    </p>
+  </div>
+  <div class="flex-item3" fxFlex="30%" fxLayout="column"
+      fxLayout.xs="column"
+      fxLayoutAlign="center center"
+      fxLayoutGap="10px"
+      fxLayoutGap.xs="0">
+    <div class="round">
+      <img src="../../assets/ico-03.svg" alt="" />
     </div>
-    <div class="col-md-3">
-      <div class="round"><img src="../../assets/ico-03.svg" alt=""/></div>
-      <p>
+    <p>
       When the time comes, use the special FastRider line to cut out a considerable wait time
     </p>
-    </div>
+  </div>
 
-  </div> 
+</div>
