--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,13 +1,6 @@
-
-<h2>
-  The Jungle
-  <sup>
-    <small>&trade;</small>
-  </sup> 
-  FastRider Service
-</h2>
-<br>
-<app-instructions></app-instructions>
-<app-search></app-search>
-<br>
-<app-rides></app-rides>
+<div class="container">
+    <h2 class="mb-4">The Jungle<sup><small>&trade;</small></sup> FastRider Service</h2>
+    <app-instructions></app-instructions>
+    <app-search></app-search>
+    <app-rides></app-rides>
+</div>
