--- a/src/app/components/instructions/instructions.component.css
+++ b/src/app/components/instructions/instructions.component.css
@@ -1,9 +1,14 @@
+
+.container {
+  width: 70%;
+}
+
 p {
   color: #656565;
-  max-width:160px;
-  margin-left: 90px;
   line-height: 15px;
   font-size: 12px;
+  text-align: justify;
+  width: 80%;
 }
 
 .round {
@@ -11,8 +16,6 @@ p {
   border-radius: 100%;
   height:40px;
   width:40px;
-  position: relative;
-  margin: 0px 0px 10px 140px;
   padding-top: 3px;
 }
 
@@ -20,4 +23,14 @@ img {
   width:32px;
   height: 32px;
   background-position: center center;
+}
+
+
+@media screen and (max-width: 699px) {
+  p {
+    width: 100%;
+  }
+  .round {
+    margin-bottom: 5px !important; 
+  }
 }
