--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,6 @@
-<form class="col-lg-12 mt-4" action="">
-  <input type="text" placeholder="&nbsp;&nbsp;#pin">
-  <button class="myBtn">submit</button>
+<form class="mt-3" action="">
+    <div class="input-group" fxFlex="60%" fxLayout="row" fxLayout.xs="row">
+        <input type="text" class="form-control" placeholder="&nbsp;#pin" aria-describedby="submit-pin">
+        <button class="myBtn" id="submit-pin">submit</button>
+      </div>
 </form>
