changed naming from search to submit

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h2 class="mb-4">The Jungle<sup><small>&trade;</small></sup> FastRider Service</h2>
     <app-instructions></app-instructions>
-    <app-search></app-search>
+    <app-submit></app-submit>
     <!-- <app-rides></app-rides> -->
 </div>
