--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -1,25 +1,29 @@
-<div class="row">
-  <div class="col-lg-12">
-    <!-- TODO: *ngFor rides in rides -->
-    <div class="card">
-      <!-- TODO: card header background color is data passed from the JSON ____complicated -->
-      <div class="card-header"> </div>
-      <!-- TODO: change to {{ride.zone.name}} -->
-      <p class="card-text"> Mandrill Hall</p>
-      <!-- TODO: change to {{ride.name}} -->
-      <h5>Big Town Hail Slides</h5>
-      <div class="row mt-4">
-        <div class="col-md-6">
-          <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
-          <!-- TODO: change to {{ride.return_time}} -->
-          <span class="ico-text"> 15:15 </span>
-        </div>
-        <div class="col-md-6">
-          <img class="small-ico" src="../../assets/ico-g-01.svg" alt="" />
-          <!-- change to {{ride.remaining_tickets}} -->
-          <span class="ico-text"> 22 </span>
-        </div>
+<div class="container mt-4">
+  <div class="row">
+    <div class="col-lg-12">
+      <!-- TODO: *ngFor rides in rides -->
+      <ul class="list-unstyled">
+        <li class="card mb-2">
+          <!-- TODO: card header background color is data passed from the JSON ____complicated -->
+          <div class="card-header"> </div>
+          <!-- TODO: change to {{ride.zone.name}} -->
+          <p class="card-text"> Mandrill Hall</p>
+          <!-- TODO: change to {{ride.name}} -->
+          <h5>Big Town Hail Slides</h5>
+          <div class="row mt-4">
+            <div class="col-md-6">
+              <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
+              <!-- TODO: change to {{ride.return_time}} -->
+              <span class="ico-text"> 15:15 </span>
+            </div>
+            <div class="col-md-6">
+              <img class="small-ico" src="../../assets/ico-g-01.svg" alt="" />
+              <!-- change to {{ride.remaining_tickets}} -->
+              <span class="ico-text"> 22 </span>
+            </div>
+          </div>
+          </li>
+      </ul>
       </div>
     </div>
   </div>
-</div>
