fixed gap issue using flex layout in rides compo

--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -10,13 +10,13 @@
           <p class="card-text"> Mandrill Hall</p>
           <!-- TODO: change to {{ride.name}} -->
           <h5>Big Town Hail Slides</h5>
-          <div class="row mt-4">
-            <div class="col-md-6">
+          <div fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="25px" fxLayoutGap.xs="20px" class="row mt-4">
+            <div>
               <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
               <!-- TODO: change to {{ride.return_time}} -->
               <span class="ico-text"> 15:15 </span>
             </div>
-            <div class="col-md-6">
+            <div>
               <img class="small-ico" src="../../assets/ico-g-01.svg" alt="" />
               <!-- change to {{ride.remaining_tickets}} -->
               <span class="ico-text"> 22 </span>
