--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -1,25 +1,20 @@
 <div class="container mt-4">
   <div class="row">
     <div class="col-lg-12">
-      <!-- TODO: *ngFor rides in rides -->
       <ul class="list-unstyled">
-        <li class="card mb-2">
+        <li class="card mb-2" *ngFor="let ride of rides">
           <!-- TODO: card header background color is data passed from the JSON ____complicated -->
           <div class="card-header"> </div>
-          <!-- TODO: change to {{ride.zone.name}} -->
-          <p class="card-text"> Mandrill Hall</p>
-          <!-- TODO: change to {{ride.name}} -->
-          <h5>Big Town Hail Slides</h5>
-          <div fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="25px" fxLayoutGap.xs="20px" class="row mt-4">
+          <p class="card-text"> {{ride.zone.name}} </p>
+          <h5> {{ride.name}} </h5>
+          <div class="row mt-4" fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="25px" fxLayoutGap.xs="20px">
             <div>
               <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
-              <!-- TODO: change to {{ride.return_time}} -->
-              <span class="ico-text"> 15:15 </span>
+              <span class="ico-text"> {{ride.returnTime | date:"shortTime" }} </span>
             </div>
             <div>
               <img class="small-ico" src="../../assets/ico-g-01.svg" alt="" />
-              <!-- change to {{ride.remaining_tickets}} -->
-              <span class="ico-text"> 22 </span>
+              <span class="ico-text"> {{ride.remainingTickets}} </span>
             </div>
           </div>
           </li>
