--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -2,9 +2,10 @@
   <div class="row">
     <div class="col-lg-12">
       <ul class="list-unstyled">
-        <li class="card mb-2" *ngFor="let ride of rides">
-          <!-- TODO: card header background color is data passed from the JSON ____complicated -->
-          <div class="card-header"> </div>
+        <li class="card mb-2" *ngFor="let ride of rides" [ngStyle]="selectedColor">
+          <input type="radio" name="rides" value="{{ride.name}}">
+          <!-- TODO: card header background color is data passed from the JSON {{ride.zone.color}} finish ngStyle-->
+          <div class="card-header" [ngStyle]="stripColor"> </div>
           <p class="card-text"> {{ride.zone.name}} </p>
           <h5> {{ride.name}} </h5>
           <div class="row mt-4" fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="25px" fxLayoutGap.xs="20px">
@@ -17,8 +18,8 @@
               <span class="ico-text"> {{ride.remainingTickets}} </span>
             </div>
           </div>
-          </li>
+        </li>
       </ul>
-      </div>
     </div>
   </div>
+</div>
