--- a/src/app/components/rides/rides.component.css
+++ b/src/app/components/rides/rides.component.css
@@ -1,11 +1,13 @@
 form {
   margin: 0px auto;
-  width: 70%;
+  width: 100%;
   padding:4px;
 }
 
 .card {
-  max-width: 150px;
+  width: 150px;
+  padding: 5px;
+  margin: 5px;
   height: 160px;
   background-color: #373737;
 }
@@ -28,13 +30,13 @@ h5 {
 }
 
 .small-ico {
-  width:22px;
-  height: 22px;
+  width:18px;
+  height: 18px;
 }
 
 .ico-text{
   padding:0;
-  font-size:0.8em;
+  font-size:0.7em;
   color:#656565;
 }
 
@@ -71,8 +73,13 @@ background-color: red;
   cursor: pointer;
 }
 @media screen and (max-width: 699px) {
-  .container {
+  form {
     margin: 0px auto;
     width: 100%;
+  }
+  .card {
+    max-width:100px;
+    height: 160px;
+    background-color: #373737;
   }
 }
