--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -1,4 +1,4 @@
-<form #pinForm="ngForm" (ngSubmit)="onSubmit(pinForm)" fxLayout="column" fxLayout.xs="column" fxFlex="60%" class="mt-3">
+<form #pinForm="ngForm" (ngSubmit)="onSubmit(pinForm)" fxLayout="column" fxLayout.xs="column" fxFlex="60%" txFlex.xs="80%" class="mt-3">
     <div class="input-group" fxLayout="row" fxLayout.xs="row">
       <input
        type="text" 
