--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -1,43 +1,35 @@
-<form #pinForm="ngForm" (ngSubmit)="onSubmit(pinForm)" fxLayout="column" fxLayout.xs="column" fxFlex="60%" txFlex.xs="80%" class="mt-3">
-    <div class="input-group" fxLayout="row" fxLayout.xs="row">
-      <input
-       type="text" 
-       style="border-radius: 0"
-       [(ngModel)]="pin"
-       [ngClass]="{'is-invalid': ridePin.errors && ridePin.touched}" class="form-control"
-       name="pin" 
-       #ridePin="ngModel" 
-       placeholder="&nbsp;#pin" 
-       aria-describedby="submit-pin" 
-       required 
-       >
-      <span class="input-group-btn">
-        <button [disabled]="!pinForm.form.valid" class="myBtn" id="submit-pin">submit</button>
-      </span>
-    </div>
-    <div class="row invalid-feedback input-group" [hidden]="!ridePin.errors?.required"> PIN number is required </div> 
-<div class="row mt-4 input-group">
-  <!-- fxLayout="row" fxLayout.xs="row" fxFlex="100%" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="10px" -->
-      <ul class="list-unstyled" fxLayout="row" fxFlex="100%" fxLayout.xs="column">
-        <li class="card mb-2" *ngFor="let ride of rides">
-          <!-- <input 
+<form #pinForm="ngForm" (ngSubmit)="onSubmit(pinForm)" fxLayout="column" fxLayout.xs="column" fxFlex="60%" txFlex.xs="80%"
+  class="mt-3">
+  <div class="input-group" fxLayout="row" fxLayout.xs="row">
+    <input type="text" style="border-radius: 0" [(ngModel)]="pin" [ngClass]="{'is-invalid': ridePin.errors && ridePin.touched}"
+      class="form-control" name="pin" #ridePin="ngModel" placeholder="&nbsp;#pin" aria-describedby="submit-pin" required>
+    <span class="input-group-btn">
+      <button [disabled]="!pinForm.form.valid" class="myBtn" id="submit-pin">submit</button>
+    </span>
+  </div>
+  <div class="row invalid-feedback input-group" [hidden]="!ridePin.errors?.required"> PIN number is required </div>
+  <div class="row mt-4 input-group">
+    <!-- fxLayout="row" fxLayout.xs="row" fxFlex="100%" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="10px" -->
+    <ul class="list-unstyled" fxLayout="row" fxFlex="100%" fxLayout.xs="column">
+      <li class="card mb-2" *ngFor="let ride of rides">
+        <!-- <input 
           type="radio" 
           name="rides" 
           value="{{ride.name}}"> -->
-          <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
-          <p class="card-text"> {{ride.zone.name}} </p>
-          <h5> {{ride.name}} </h5>
-          <div class="row mt-4" fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="12px" fxLayoutGap.xs="20px">
-            <div>
-              <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
-              <span class="ico-text"> {{ride.returnTime | date:"shortTime" }} </span>
-            </div>
-            <div>
-              <img class="small-ico" src="../../assets/ico-g-01.svg" alt="" />
-              <span class="ico-text"> {{ride.remainingTickets}} </span>
-            </div>
+        <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
+        <p class="card-text"> {{ride.zone.name}} </p>
+        <h5> {{ride.name}} </h5>
+        <div class="row mt-4" fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="12px" fxLayoutGap.xs="20px">
+          <div>
+            <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
+            <span class="ico-text"> {{ride.returnTime | date:"shortTime" }} </span>
           </div>
-        </li>
-      </ul>
-</div>
-</form> 
+          <div>
+            <img class="small-ico" src="../../assets/ico-g-01.svg" alt="" />
+            <span class="ico-text"> {{ride.remainingTickets}} </span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</form>
