--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container mt-5">
-   <app-dashboard></app-dashboard>
-</div>  
-
+  <router-outlet></router-outlet>
+</div>
