added routerlink to headline in all pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container mt-5">
+  <a routerLink="/">
+    <h2 class="mb-4">The Jungle
+      <sup>
+        <small>&trade;</small>
+      </sup> FastRider Service</h2>
+  </a>
   <router-outlet></router-outlet>
 </div>
