design for ticket page

--- a/src/app/components/ticket/ticket.component.html
+++ b/src/app/components/ticket/ticket.component.html
@@ -1,1 +1,14 @@
-<h2> Congratulations! </h2>
+<div class="container mt-4" fxLayout fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+    <div class="flex-item1" fxFlex="25%" fxLayout="column"
+    fxLayout.xs="column"
+    fxLayoutAlign="center center"
+    fxLayoutGap="10px"
+    fxLayoutGap.xs="0">
+    <div class="round">
+      <img src="../../assets/ico-04.svg" alt="" />
+    </div>
+    <p class="text-center">
+      Thank you for using The Jungle<sup>&trade;</sup> FastRider ticket system - your access code is now ready! 
+    </p>
+  </div>
+</div>
