--- a/src/app/components/ticket/ticket.component.html
+++ b/src/app/components/ticket/ticket.component.html
@@ -10,24 +10,24 @@
       <sup>&trade;</sup> FastRider ticket system - your access code is now ready!
     </p>
   </div>
-<div class="flex-item2" fxFlex="25%" fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px"
-fxLayoutGap.xs="0">
-  <ul fxFlex="100%" fxLayoutAlign="center center">
-  <li class="card" *ngFor="let ride of rides">
-      <!-- <input 
-        type="radio" 
-        name="rides" 
-        value="{{ride.name}}"> -->
-      <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
-      <p class="card-text mt-2" fxLayoutAlign="space-between center" fxLayoutGap="20px" fxLayoutGap.xs="20px"> <span>{{ride.name}}</span> {{ride.zone.name}} </p>
-   
-      <p class="card-text mt-2" fxLayoutAlign="center center"> Return At</p>
-      <span class="" fxLayout fxLayout.xs="column" fxLayoutAlign="center center"> {{ride.returnTime | date:"shortTime" }} </span>
-      <p class="card-text" fxLayoutAlign="center center"> Use Access Code</p>
-      <span class=""> 11-4586-99 </span>
-      <!-- TODO: should be access code from tickets api -->
-    </li>
-  </ul>
-</div>
-</div>
+  <div class="flex-item2" fxFlex="25%" fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px"
+    fxLayoutGap.xs="0">
+    <ul fxFlex="100%" fxLayoutAlign="center center">
+      <li class="card" *ngFor="let ride of rides">
 
+        <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
+
+        <p class="card-text mt-2" fxLayoutAlign="space-between center" fxLayoutGap="20px" fxLayoutGap.xs="20px">
+          <span class="text-white">{{ride.name}}</span> {{ride.zone.name}}
+        </p>
+        <p class="card-text mt-3" fxLayoutAlign="center center"> Return At</p>
+        <span class="text-white">
+          {{ride.returnTime | date:"shortTime" }}
+        </span>
+        <p class="card-text mt-2" fxLayoutAlign="center center"> Use Access Code</p>
+        <span class="text-white mt-2.5"> 11-4586-99 </span>
+        <!-- TODO: should be access code from tickets api -->
+      </li>
+    </ul>
+  </div>
+</div>
