--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,11 @@ h1, h2, h5{
 a, a:hover {
   text-decoration: none;
 }
+
+
+
+@media screen and (max-width: 699px) {
+  h2{
+    font-size:1.25rem;
+  }
+ }
