--- a/src/app/components/rides/rides.component.css
+++ b/src/app/components/rides/rides.component.css
@@ -1,9 +1,15 @@
+.container {
+  width: 650px;
+}
+
 form {
   margin: 0px auto;
   max-width: 100%;
   padding:4px;
 }
-
+.invalid-feedback {
+  max-width: 60%;
+}
 .card {
   width: 150px;
   padding: 5px;
@@ -43,11 +49,6 @@ h5 {
   color:#656565;
 }
 
-input[type="radio"]{
-  position:fixed;
-  opacity:1;
-}
-
 .card:selected{
 background-color: red;
 }
@@ -57,6 +58,10 @@ background-color: red;
 .input-group {
   margin: 0px auto;
   border-radius: 0;
+}
+
+.bar {
+  max-width: 60%;
 }
 
 ::-webkit-input-placeholder { 
@@ -75,16 +80,42 @@ background-color: red;
   font-size: 0.8rem;
   cursor: pointer;
 }
+
 @media screen and (max-width: 699px) {
+  .container {
+    max-width: 400px;
+    overflow-x: hidden;
+    /* margin-right:180px !important; */
+  }
+
+
+.myBtn{
+  background-color: #4c4c4b;
+  border: none;
+  text-transform: uppercase;
+  color: #fff;
+  border-radius: 0;
+  font-size: 1rem;
+  cursor: pointer;
+  width: 400px;
+  margin-left: -80px;
+  height: 40px;
+  z-index: 999;
+  position: fixed;
+}
+  
   form {
     margin: 0px auto;
-    /* flex: 80%;
-    width:400px; */
     max-width: 93%;
   }
+
+  .bar {
+    max-width: 80%;
+  }
   .card {
-    width: 47%;
-    height:39%;
+    width: 90%;
+    height:100%;
+    margin-bottom:18px;
   }
   h5 {
     font-size: 0.80rem;
