--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -1,9 +1,8 @@
-<form #pinForm="ngForm" (ngSubmit)="onSubmit(pinForm)"
-  class="mt-3">
+<form #pinForm="ngForm" (ngSubmit)="onSubmit(pinForm)" class="mt-3">
   <div class="bar input-group">
     <input type="text" style="border-radius: 0" [(ngModel)]="pin" [ngClass]="{'is-invalid': ridePin.errors && ridePin.touched}"
       class="form-control" name="pin" #ridePin="ngModel" placeholder="&nbsp;#pin" required>
-      <button (click)="submitForm()" [disabled]="!pinForm.form.valid" class="myBtn">submit</button>
+    <button (click)="submitForm()" class="myBtn">submit</button>
   </div>
 
   <div class="row invalid-feedback input-group mt-2" [hidden]="!ridePin.errors?.required"> PIN number is required </div>
@@ -12,7 +11,7 @@
     <div class="row" style="display:flex;" >
       <div *ngFor="let ride of rides;let i = index" (click)="rideClicked(ride.id)">
         <div class="card mb-2">
-            <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
+            <div class="card-header" [ngStyle]="{'background-color': ride.zone.color"> </div>
             <p class="card-text"> {{ride.zone.name}} </p>
             <h5> {{ride.name}} </h5>
             <div class="row mt-4" fxLayout fxLayout.xs="row" fxLayoutAlign="center center" fxLayoutGap="12px" fxLayoutGap.xs="20px">
