--- a/src/app/components/ticket/ticket.component.html
+++ b/src/app/components/ticket/ticket.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-4" fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="15px" fxLayoutGap.xs="0">
+<div class="container mt-4" fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="0">
 
   <div class="flex-item1" fxFlex="40%" fxLayout="column" fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px"
     fxLayoutGap.xs="0">
@@ -14,17 +14,16 @@
     fxLayoutGap.xs="0">
     <ul fxFlex="100%" fxLayoutAlign="center center">
       <li class="card" *ngFor="let ride of rides">
-        <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
+        <div class="card-header" [ngStyle]="{'background-color': ride.ride.zone.color}"> </div>
         <div class="card-text mt-2" fxLayoutAlign="space-around center" fxLayoutGap="30px" fxLayoutGap.xs="20px">
-          <span class="text-white">{{ride.name}}</span> {{ride.zone.name}}
+          <span class="text-white">{{ride.ride.name}}</span> {{ride.ride.zone.name}}
         </div>
         <div class="card-text mt-3" fxLayoutAlign="center center"> Return At</div>
         <span class="text-white">
-          {{ride.returnTime | date:"shortTime" }}
+          {{ride.return_time | date:"shortTime" }}
         </span>
         <div class="card-text mt-2" fxLayoutAlign="center center"> Use Access Code</div>
-        <span class="text-white mt-2.5"> 11-4586-99 </span>
-        <!-- TODO: should be access code from tickets api -->
+        <span class="text-white mt-2.5"> {{ride.access_code}} </span>
       </li>
     </ul>
   </div>
