--- a/src/app/components/ticket/ticket.component.html
+++ b/src/app/components/ticket/ticket.component.html
@@ -24,8 +24,11 @@
         </span>
         <div class="card-text mt-2" fxLayoutAlign="center center"> Use Access Code</div>
         <span class="text-white mt-2.5"> {{ride.access_code}} </span>
-          <a class="link-info small" href="https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text=The+Jungle+Ride+Access+Code&dates=20180227T160000Z/20180227T190000Z&sf=true&output=xml"> Add ride to calander</a> 
+          <!-- <a class="link-info small" href="https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text={{ride.ride.name}}+Access+Code&dates={{ride.return_time | date:"YYYYMMDDHHMM"}}&sf=true&output=xml"> Add ride to calander</a>  -->
       </div>
     </div>
   </div>
 </div>
+<!-- https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text=string+Access+Code&dates=2018-02-13T09:47:42.949Z+T160000Z/20180227T190000Z&sf=true&output=xml -->
+
+<!-- https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text=string+Access+Code&dates=20180213T190000Z/20180227T190000Z&sf=true&output=xml -->
