--- a/src/app/components/instructions/instructions.component.html
+++ b/src/app/components/instructions/instructions.component.html
@@ -1,24 +1,22 @@
 <div class="container" fxLayout fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="0">
   <div class="flex-item1" fxFlex="30%" fxLayout="column"
-    fxLayout.xs="column"
-    fxLayoutAlign="center center"
-    fxLayoutGap="10px"
-    fxLayoutGap.xs="0">
-    <div class="round">
+    fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="0">
+    <span class="round">
       <img src="../../assets/ico-01.svg" alt="" />
-    </div>
+    </span>
     <p class="text-center">
       Enter your park ticket #PIN number, then select the desired ride while noting the stated return time
     </p>
   </div>
+
   <div class="flex-item2" fxFlex="30%" fxLayout="column"
       fxLayout.xs="column"
       fxLayoutAlign="center center"
       fxLayoutGap="10px"
       fxLayoutGap.xs="0">
-    <div class="round">
+    <span class="round">
       <img src="../../assets/ico-02.svg" alt="" />
-    </div>
+    </span>
     <p>
       Press 'submit' to confirm and retrieve your access code
     </p>
@@ -28,9 +26,9 @@
       fxLayoutAlign="center center"
       fxLayoutGap="10px"
       fxLayoutGap.xs="0">
-    <div class="round">
+    <span class="round">
       <img src="../../assets/ico-03.svg" alt="" />
-    </div>
+    </span>
     <p>
       When the time comes, use the special FastRider line to cut out a considerable wait time
     </p>
