--- a/src/app/components/rides/rides.component.css
+++ b/src/app/components/rides/rides.component.css
@@ -1,11 +1,10 @@
 .container {
   width: 650px;
 }
-
 form {
   margin: 0px auto;
   max-width: 100%;
-  padding:4px;
+  padding: 4px;
 }
 .invalid-feedback {
   max-width: 60%;
@@ -26,10 +25,10 @@ form {
 }
 
 .card-text {
-  color:#656565;
+  color: #656565;
   font-size: 0.8em;
   text-align: right;
-  padding:5px;
+  padding: 5px;
 }
 
 h6 {
@@ -41,18 +40,18 @@ h6 {
 }
 
 .small-ico {
-  width:18px;
+  width: 18px;
   height: 18px;
 }
 
-.ico-text{
-  padding:0;
-  font-size:0.7em;
-  color:#656565;
+.ico-text {
+  padding: 0;
+  font-size: 0.7em;
+  color: #656565;
 }
 
-.card:selected{
-background-color: red;
+.card:selected {
+  background-color: red;
 }
 
 /* submit */
@@ -66,14 +65,14 @@ background-color: red;
   max-width: 60%;
 }
 
-::-webkit-input-placeholder { 
-  color:#000;
+::-webkit-input-placeholder {
+  color: #000;
   text-transform: uppercase;
-  padding:4px;
+  padding: 4px;
   font-size: 0.8em;
 }
 
-.myBtn{
+.myBtn {
   background-color: #4c4c4b;
   border: none;
   text-transform: uppercase;
@@ -85,44 +84,47 @@ background-color: red;
 
 @media screen and (max-width: 699px) {
   .container {
-    max-width: 400px;
-    overflow-x: hidden;
-    /* margin-right:180px !important; */
+    width: 300px;
+    margin-left: 15px;
   }
 
+  .myBtn {
+    background-color: #4c4c4b;
+    border: none;
+    text-transform: uppercase;
+    color: #fff;
+    border-radius: 0;
+    font-size: 1rem;
+    cursor: pointer;
+    width: 400px;
+    margin-left: -80px;
+    height: 40px;
+    z-index: 999;
+    position: fixed;
+  }
 
-.myBtn{
-  background-color: #4c4c4b;
-  border: none;
-  text-transform: uppercase;
-  color: #fff;
-  border-radius: 0;
-  font-size: 1rem;
-  cursor: pointer;
-  width: 400px;
-  margin-left: -80px;
-  height: 40px;
-  z-index: 999;
-  position: fixed;
-}
-  
   form {
     margin: 0px auto;
-    max-width: 93%;
+    max-width: 100%;
   }
 
   .bar {
     max-width: 80%;
   }
+
   .card {
     width: 90%;
-    height:100%;
-    margin-bottom:18px;
+    height: 90%;
+    margin-bottom: 18px;
   }
-  h5 {
-    font-size: 0.80rem;
+
+  h6 {
+    font-size: 0.85rem;
   }
   .card-header {
     width: 90%;
+  }
+  .card-text {
+    font-size: 0.6em;
   }
 }
