--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -10,12 +10,13 @@
   <div class="container mt-4 input-group">
     <div class="row" style="display:flex;">
       <div *ngFor="let ride of rides;let i = index" (click)="rideClicked(ride.id, i)">
-        <div class="card mb-2" [ngStyle] = "ride.isSelected">
+        <div class="card mb-2" [ngStyle]="ride.isSelected">
           <div class="card-header" [ngStyle]="{'background-color': ride.zone.color}"> </div>
           <p class="card-text"> {{ride.zone.name}} </p>
           <h6> {{ride.name}} </h6>
 
-          <div class="row mt-4" fxLayout fxLa yout.xs="row" fxLayoutAlign="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="20px">
+          <div class="row mt-4" *ngIf="parkOpen" fxLayout fxLa yout.xs="row"
+            fxLayoutAlign="space-around center" fxLayoutGap="10px" fxLayoutGap.xs="20px">
             <div>
               <img class="small-ico" src="../../assets/ico-g-03.svg" alt="" />
               <span class="ico-text"> {{ride.return_time | date:"shortTime" }} </span>
@@ -30,3 +31,8 @@
     </div>
   </div>
 </form>
+
+<!-- 
+<ng-template #parkClosed>
+      <p class="text-white"><small>park is closed</small></p>
+</ng-template> -->
