--- a/src/app/components/rides/rides.component.html
+++ b/src/app/components/rides/rides.component.html
@@ -3,7 +3,7 @@
     <div class="bar input-group">
       <input type="text" style="border-radius: 0" [(ngModel)]="pin" [ngClass]="{'is-invalid': ridePin.errors && ridePin.touched}"
         class="form-control" name="pin" #ridePin="ngModel" placeholder="&nbsp;#pin" required>
-      <button (click)="submitForm()" class="myBtn">submit</button>
+      <button (click)="submitForm()" class="myBtn" *ngIf="subBtn">submit</button>
     </div>
     <div class="row invalid-feedback input-group mt-2" [hidden]="!ridePin.errors?.required"> PIN number is required </div>
   </div>
