--- a/src/app/components/ticket/ticket.component.html
+++ b/src/app/components/ticket/ticket.component.html
@@ -24,11 +24,8 @@
         </span>
         <div class="card-text mt-2" fxLayoutAlign="center center"> Use Access Code</div>
         <span class="text-white mt-2.5"> {{ride.access_code}} </span>
-          <!-- <a class="link-info small" href="https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text={{ride.ride.name}}+Access+Code&dates={{ride.return_time | date:"YYYYMMDDHHMM"}}&sf=true&output=xml"> Add ride to calander</a>  -->
+          <a target="_blank" class="link-info small" href="https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text={{ride.ride.name}}+Access+Code&dates=20180215T101500Z/20180215T103000Z&sf=true&output=xml"> Add ride to calendar</a> 
       </div>
     </div>
   </div>
 </div>
-<!-- https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text=string+Access+Code&dates=2018-02-13T09:47:42.949Z+T160000Z/20180227T190000Z&sf=true&output=xml -->
-
-<!-- https://calendar.google.com/calendar/r/eventedit?location=The+Jungle+Park&sprop=name:Einar+Barzilay&sprop=website:https://confident-sammet-771650.netlify.com&details=Please+make+sure+to+arrive+15+minutes+before+your+turn&text=string+Access+Code&dates=20180213T190000Z/20180227T190000Z&sf=true&output=xml -->
