--- a/src/app/components/instructions/instructions.component.html
+++ b/src/app/components/instructions/instructions.component.html
@@ -2,7 +2,7 @@
   <div class="flex-item1" fxFlex="30%" fxLayout="column"
     fxLayout.xs="column" fxLayoutAlign="center center" fxLayoutGap="10px" fxLayoutGap.xs="0">
     <span class="round">
-      <img src="../../assets/ico-01.svg" alt="" />
+      <img src="../../assets/ico-01.svg" alt="ticket" />
     </span>
     <p class="text-center">
       Enter your park ticket #PIN number, then select the desired ride while noting the stated return time
@@ -15,7 +15,7 @@
       fxLayoutGap="10px"
       fxLayoutGap.xs="0">
     <span class="round">
-      <img src="../../assets/ico-02.svg" alt="" />
+      <img src="../../assets/ico-02.svg" alt="fly" />
     </span>
     <p>
       Press 'submit' to confirm and retrieve your access code
@@ -27,7 +27,7 @@
       fxLayoutGap="10px"
       fxLayoutGap.xs="0">
     <span class="round">
-      <img src="../../assets/ico-03.svg" alt="" />
+      <img src="../../assets/ico-03.svg" alt="clock" />
     </span>
     <p>
       When the time comes, use the special FastRider line to cut out a considerable wait time
